<resources>
    <string name="app_name">Repeater</string>
    <string name="google_web_client_id">591559372349-vmhqsid25nj6l2n4lil292v4blvajkph.apps.googleusercontent.com</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Logar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="signup">Registrar</string>
    <string name="name">Nome Completo</string>
    <string name="email_confirmation">Repetir o E-mail</string>
    <string name="password_helper">Sua senha deve conter ao menos 6 caracteres.</string>
    <string name="password_confirmation">Repita a Senha</string>
    <string name="profile">Perfil</string>

    <!--Home -->
    <string name="welcome_text">Bem vindo de volta %s ;)</string>
    <string name="deck_info_new">Novo</string>
    <string name="deck_info_learning">Aprendendo</string>
    <string name="deck_info_reviewing">Para Revisar</string>
    <string name="content_description_add_deck">Adicionar Deck</string>
    <string name="save_new_deck">Salvar Novo Deck</string>

    <!-- Deck -->
    <string name="hint_title">Nome do Deck</string>
    <string name="hint_category">Categoria</string>
    <string name="hint_description">Descrição</string>
    <string name="error_saving_deck">Problemas ao salvar o novo Deck, tente novamente mais tarde</string>
    <string name="last_view">Visto por ultimo: $s</string>
    <string name="reveal_answer">Revelar Resposta</string>
    <string name="config">Configurar</string>
    <string name="delete">Excluir</string>
    <string name="cancel">Cancelar</string>
    <string name="wish_exclude_item">Deseja mesmo excluir este item?</string>
    <string name="study">Estudar</string>
    <string name="add_new_card">Adicionar Novo Cartão</string>
    <string name="my_cards">Próximo Cartão</string>
    <string name="tittle">Titulo</string>
    <string name="back">Voltar</string>
    <string name="front_card_hint_info">Adicione a pergunta do seu cartão</string>
    <string name="back_card_hint_info">Adicione a resposta do seu cartão</string>
    <string name="save_card">Salvar Cartões</string>

    <!-- button card -->
    <string name="button_card_turn_round">Virar o Card</string>
</resources>