<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding_default"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="@dimen/img_default_size"
        android:layout_height="@dimen/img_default_size"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back"
        android:clickable="true"
        android:focusable="true" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_front"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ask_card_size_default"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_marginTop="@dimen/default_margins"
        android:layout_marginEnd="@dimen/min_margin"
        android:layout_marginStart="@dimen/min_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_back">

        <EditText
            android:id="@+id/et_ask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/front_card_hint_info"
            android:textAppearance="@style/Text.CardTextAppearance"
            android:maxLines="5"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:padding="16dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ask_card_size_default"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_marginTop="@dimen/default_margins"
        android:layout_marginEnd="@dimen/min_margin"
        android:layout_marginStart="@dimen/min_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_front">

        <EditText
            android:id="@+id/et_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/back_card_hint_info"
            android:textAppearance="@style/Text.CardTextAppearance"
            android:maxLines="5"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:padding="16dp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_save_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>